stub_LIBRARIES = msvcrt.a

msvcrt_SOURCES = \
	do_init.c \
	sec_start.S \
	imp__daylight.S \
	imp__timezone.S \
	imp__tzname.S \
	imp_longjmp.S \
	stub_I10_OUTPUT.S \
	imp_I10_OUTPUT.S \
	stub___uncaught_exception.S \
	imp___uncaught_exception.S \
	stub__CxxThrowException.S \
	imp__CxxThrowException.S \
	stub__Getdays.S \
	imp__Getdays.S \
	stub__Getmonths.S \
	imp__Getmonths.S \
	stub__Gettnames.S \
	imp__Gettnames.S \
	imp__HUGE.S \
	stub__Strftime.S \
	imp__Strftime.S \
	stub__XcptFilter.S \
	imp__XcptFilter.S \
	stub___C_specific_handler.S \
	imp___C_specific_handler.S \
	stub___CppXcptFilter.S \
	imp___CppXcptFilter.S \
	stub___CxxFrameHandler.S \
	imp___CxxFrameHandler.S \
	stub___DestructExceptionObject.S \
	imp___DestructExceptionObject.S \
	stub___RTCastToVoid.S \
	imp___RTCastToVoid.S \
	stub___RTDynamicCast.S \
	imp___RTDynamicCast.S \
	stub___RTtypeid.S \
	imp___RTtypeid.S \
	stub___STRINGTOLD.S \
	imp___STRINGTOLD.S \
	stub____lc_codepage_func.S \
	imp____lc_codepage_func.S \
	stub____lc_collate_cp_func.S \
	imp____lc_collate_cp_func.S \
	stub____lc_handle_func.S \
	imp____lc_handle_func.S \
	stub____mb_cur_max_func.S \
	imp____mb_cur_max_func.S \
	stub____setlc_active_func.S \
	imp____setlc_active_func.S \
	stub____unguarded_readlc_active_add_func.S \
	imp____unguarded_readlc_active_add_func.S \
	imp___argc.S \
	imp___argv.S \
	imp___badioinfo.S \
	stub___crtCompareStringA.S \
	imp___crtCompareStringA.S \
	stub___crtCompareStringW.S \
	imp___crtCompareStringW.S \
	stub___crtGetLocaleInfoW.S \
	imp___crtGetLocaleInfoW.S \
	stub___crtGetStringTypeW.S \
	imp___crtGetStringTypeW.S \
	stub___crtLCMapStringA.S \
	imp___crtLCMapStringA.S \
	stub___crtLCMapStringW.S \
	imp___crtLCMapStringW.S \
	stub___dllonexit.S \
	imp___dllonexit.S \
	stub___doserrno.S \
	imp___doserrno.S \
	stub___fpecode.S \
	imp___fpecode.S \
	stub___getmainargs.S \
	imp___getmainargs.S \
	imp___initenv.S \
	stub___iob_func.S \
	imp___iob_func.S \
	stub___isascii.S \
	imp___isascii.S \
	stub___iscsym.S \
	imp___iscsym.S \
	stub___iscsymf.S \
	imp___iscsymf.S \
	imp___lc_codepage.S \
	imp___lc_collate_cp.S \
	imp___lc_handle.S \
	stub___lconv_init.S \
	imp___lconv_init.S \
	imp___mb_cur_max.S \
	stub___pctype_func.S \
	imp___pctype_func.S \
	imp___pioinfo.S \
	stub___pwctype_func.S \
	imp___pwctype_func.S \
	stub___pxcptinfoptrs.S \
	imp___pxcptinfoptrs.S \
	stub___set_app_type.S \
	imp___set_app_type.S \
	imp___setlc_active.S \
	stub___setusermatherr.S \
	imp___setusermatherr.S \
	stub___threadhandle.S \
	imp___threadhandle.S \
	stub___threadid.S \
	imp___threadid.S \
	stub___toascii.S \
	imp___toascii.S \
	stub___unDName.S \
	imp___unDName.S \
	stub___unDNameEx.S \
	imp___unDNameEx.S \
	imp___unguarded_readlc_active.S \
	imp___wargv.S \
	stub___wcserror.S \
	imp___wcserror.S \
	stub___wcserror_s.S \
	imp___wcserror_s.S \
	stub___wgetmainargs.S \
	imp___wgetmainargs.S \
	imp___winitenv.S \
	stub__abs64.S \
	imp__abs64.S \
	stub__access.S \
	imp__access.S \
	imp__acmdln.S \
	imp__aexit_rtn.S \
	stub__aligned_free.S \
	imp__aligned_free.S \
	stub__aligned_malloc.S \
	imp__aligned_malloc.S \
	stub__aligned_offset_malloc.S \
	imp__aligned_offset_malloc.S \
	stub__aligned_offset_realloc.S \
	imp__aligned_offset_realloc.S \
	stub__aligned_realloc.S \
	imp__aligned_realloc.S \
	stub__amsg_exit.S \
	imp__amsg_exit.S \
	imp__assert.S \
	stub__atodbl.S \
	imp__atodbl.S \
	stub__atodbl_l.S \
	imp__atodbl_l.S \
	stub__atof_l.S \
	imp__atof_l.S \
	stub__atoflt_l.S \
	imp__atoflt_l.S \
	stub__atoi64.S \
	imp__atoi64.S \
	stub__atoi64_l.S \
	imp__atoi64_l.S \
	stub__atoi_l.S \
	imp__atoi_l.S \
	stub__atol_l.S \
	imp__atol_l.S \
	stub__atoldbl.S \
	imp__atoldbl.S \
	stub__atoldbl_l.S \
	imp__atoldbl_l.S \
	stub__beep.S \
	imp__beep.S \
	stub__beginthread.S \
	imp__beginthread.S \
	stub__beginthreadex.S \
	imp__beginthreadex.S \
	stub__c_exit.S \
	imp__c_exit.S \
	imp__cabs.S \
	stub__callnewh.S \
	imp__callnewh.S \
	stub__cexit.S \
	imp__cexit.S \
	stub__cgets.S \
	imp__cgets.S \
	stub__cgetws.S \
	imp__cgetws.S \
	stub__chdir.S \
	imp__chdir.S \
	stub__chdrive.S \
	imp__chdrive.S \
	stub__chgsign.S \
	imp__chgsign.S \
	stub__chgsignf.S \
	imp__chgsignf.S \
	stub__chmod.S \
	imp__chmod.S \
	stub__chsize.S \
	imp__chsize.S \
	stub__clearfp.S \
	imp__clearfp.S \
	stub__close.S \
	imp__close.S \
	stub__commit.S \
	imp__commit.S \
	imp__commode.S \
	stub__control87.S \
	imp__control87.S \
	stub__controlfp.S \
	imp__controlfp.S \
	stub__copysign.S \
	imp__copysign.S \
	stub__copysignf.S \
	imp__copysignf.S \
	stub__cprintf.S \
	imp__cprintf.S \
	stub__cprintf_l.S \
	imp__cprintf_l.S \
	stub__cprintf_p.S \
	imp__cprintf_p.S \
	stub__cprintf_p_l.S \
	imp__cprintf_p_l.S \
	stub__cputs.S \
	imp__cputs.S \
	stub__cputws.S \
	imp__cputws.S \
	stub__creat.S \
	imp__creat.S \
	stub__cscanf.S \
	imp__cscanf.S \
	stub__cscanf_l.S \
	imp__cscanf_l.S \
	stub__cscanf_s.S \
	imp__cscanf_s.S \
	stub__cscanf_s_l.S \
	imp__cscanf_s_l.S \
	stub__ctime64.S \
	imp__ctime64.S \
	stub__ctype.S \
	imp__ctype.S \
	stub__cwait.S \
	imp__cwait.S \
	stub__cwprintf.S \
	imp__cwprintf.S \
	stub__cwprintf_l.S \
	imp__cwprintf_l.S \
	stub__cwprintf_p.S \
	imp__cwprintf_p.S \
	stub__cwprintf_p_l.S \
	imp__cwprintf_p_l.S \
	stub__cwscanf.S \
	imp__cwscanf.S \
	stub__cwscanf_l.S \
	imp__cwscanf_l.S \
	stub__cwscanf_s.S \
	imp__cwscanf_s.S \
	stub__cwscanf_s_l.S \
	imp__cwscanf_s_l.S \
	imp__dstbias.S \
	stub__dup.S \
	imp__dup.S \
	stub__dup2.S \
	imp__dup2.S \
	stub__ecvt.S \
	imp__ecvt.S \
	stub__ecvt_s.S \
	imp__ecvt_s.S \
	stub__endthread.S \
	imp__endthread.S \
	stub__endthreadex.S \
	imp__endthreadex.S \
	imp__environ.S \
	stub__eof.S \
	imp__eof.S \
	stub__errno.S \
	imp__errno.S \
	stub__execl.S \
	imp__execl.S \
	stub__execle.S \
	imp__execle.S \
	stub__execlp.S \
	imp__execlp.S \
	stub__execlpe.S \
	imp__execlpe.S \
	stub__execv.S \
	imp__execv.S \
	stub__execve.S \
	imp__execve.S \
	stub__execvp.S \
	imp__execvp.S \
	stub__execvpe.S \
	imp__execvpe.S \
	stub__exit.S \
	imp__exit.S \
	stub__expand.S \
	imp__expand.S \
	stub__fcloseall.S \
	imp__fcloseall.S \
	stub__fcvt.S \
	imp__fcvt.S \
	stub__fcvt_s.S \
	imp__fcvt_s.S \
	stub__fdopen.S \
	imp__fdopen.S \
	stub__fgetchar.S \
	imp__fgetchar.S \
	stub__fgetwchar.S \
	imp__fgetwchar.S \
	stub__filbuf.S \
	imp__filbuf.S \
	imp__fileinfo.S \
	stub__filelength.S \
	imp__filelength.S \
	stub__filelengthi64.S \
	imp__filelengthi64.S \
	stub__fileno.S \
	imp__fileno.S \
	stub__findclose.S \
	imp__findclose.S \
	stub__findfirst.S \
	imp__findfirst.S \
	stub__findfirst64.S \
	imp__findfirst64.S \
	stub__findfirsti64.S \
	imp__findfirsti64.S \
	stub__findnext.S \
	imp__findnext.S \
	stub__findnext64.S \
	imp__findnext64.S \
	stub__findnexti64.S \
	imp__findnexti64.S \
	stub__finite.S \
	imp__finite.S \
	stub__finitef.S \
	imp__finitef.S \
	stub__flsbuf.S \
	imp__flsbuf.S \
	stub__flushall.S \
	imp__flushall.S \
	imp__fmode.S \
	stub__fpclass.S \
	imp__fpclass.S \
	stub__fpclassf.S \
	imp__fpclassf.S \
	imp__fpreset.S \
	stub__fprintf_l.S \
	imp__fprintf_l.S \
	stub__fprintf_p.S \
	imp__fprintf_p.S \
	stub__fprintf_p_l.S \
	imp__fprintf_p_l.S \
	stub__fprintf_s_l.S \
	imp__fprintf_s_l.S \
	stub__fputchar.S \
	imp__fputchar.S \
	stub__fputwchar.S \
	imp__fputwchar.S \
	stub__fscanf_l.S \
	imp__fscanf_l.S \
	stub__fscanf_s_l.S \
	imp__fscanf_s_l.S \
	stub__fsopen.S \
	imp__fsopen.S \
	stub__fstat.S \
	imp__fstat.S \
	stub__fstat64.S \
	imp__fstat64.S \
	stub__fstati64.S \
	imp__fstati64.S \
	stub__ftime.S \
	imp__ftime.S \
	stub__ftime32_s.S \
	imp__ftime32_s.S \
	stub__ftime64.S \
	imp__ftime64.S \
	stub__ftime64_s.S \
	imp__ftime64_s.S \
	stub__fullpath.S \
	imp__fullpath.S \
	stub__futime.S \
	imp__futime.S \
	stub__futime64.S \
	imp__futime64.S \
	stub__fwprintf_l.S \
	imp__fwprintf_l.S \
	stub__fwprintf_p.S \
	imp__fwprintf_p.S \
	stub__fwprintf_p_l.S \
	imp__fwprintf_p_l.S \
	stub__fwprintf_s_l.S \
	imp__fwprintf_s_l.S \
	stub__fwscanf_l.S \
	imp__fwscanf_l.S \
	stub__fwscanf_s_l.S \
	imp__fwscanf_s_l.S \
	stub__gcvt.S \
	imp__gcvt.S \
	stub__gcvt_s.S \
	imp__gcvt_s.S \
	stub__get_heap_handle.S \
	imp__get_heap_handle.S \
	stub__get_osfhandle.S \
	imp__get_osfhandle.S \
	stub__get_sbh_threshold.S \
	imp__get_sbh_threshold.S \
	stub__getch.S \
	imp__getch.S \
	stub__getche.S \
	imp__getche.S \
	stub__getcwd.S \
	imp__getcwd.S \
	stub__getdcwd.S \
	imp__getdcwd.S \
	stub__getdiskfree.S \
	imp__getdiskfree.S \
	stub__getdllprocaddr.S \
	imp__getdllprocaddr.S \
	stub__getdrive.S \
	imp__getdrive.S \
	stub__getdrives.S \
	imp__getdrives.S \
	stub__getmaxstdio.S \
	imp__getmaxstdio.S \
	stub__getmbcp.S \
	imp__getmbcp.S \
	stub__getpid.S \
	imp__getpid.S \
	stub__getsystime.S \
	imp__getsystime.S \
	stub__getw.S \
	imp__getw.S \
	stub__getwch.S \
	imp__getwch.S \
	stub__getwche.S \
	imp__getwche.S \
	stub__getws.S \
	imp__getws.S \
	stub__gmtime32.S \
	imp__gmtime32.S \
	stub__gmtime64.S \
	imp__gmtime64.S \
	stub__heapadd.S \
	imp__heapadd.S \
	stub__heapchk.S \
	imp__heapchk.S \
	stub__heapmin.S \
	imp__heapmin.S \
	stub__heapset.S \
	imp__heapset.S \
	stub__heapused.S \
	imp__heapused.S \
	stub__heapwalk.S \
	imp__heapwalk.S \
	stub__hypot.S \
	imp__hypot.S \
	stub__hypotf.S \
	imp__hypotf.S \
	stub__i64toa.S \
	imp__i64toa.S \
	stub__i64toa_s.S \
	imp__i64toa_s.S \
	stub__i64tow.S \
	imp__i64tow.S \
	stub__i64tow_s.S \
	imp__i64tow_s.S \
	stub__initterm.S \
	imp__initterm.S \
	imp__iob.S \
	stub__isalnum_l.S \
	imp__isalnum_l.S \
	stub__isalpha_l.S \
	imp__isalpha_l.S \
	stub__isatty.S \
	imp__isatty.S \
	stub__iscntrl_l.S \
	imp__iscntrl_l.S \
	stub__isctype.S \
	imp__isctype.S \
	stub__isctype_l.S \
	imp__isctype_l.S \
	stub__isdigit_l.S \
	imp__isdigit_l.S \
	stub__isgraph_l.S \
	imp__isgraph_l.S \
	stub__isleadbyte_l.S \
	imp__isleadbyte_l.S \
	stub__islower_l.S \
	imp__islower_l.S \
	stub__ismbbalnum.S \
	imp__ismbbalnum.S \
	stub__ismbbalnum_l.S \
	imp__ismbbalnum_l.S \
	stub__ismbbalpha.S \
	imp__ismbbalpha.S \
	stub__ismbbalpha_l.S \
	imp__ismbbalpha_l.S \
	stub__ismbbgraph.S \
	imp__ismbbgraph.S \
	stub__ismbbgraph_l.S \
	imp__ismbbgraph_l.S \
	stub__ismbbkalnum.S \
	imp__ismbbkalnum.S \
	stub__ismbbkalnum_l.S \
	imp__ismbbkalnum_l.S \
	stub__ismbbkana.S \
	imp__ismbbkana.S \
	stub__ismbbkana_l.S \
	imp__ismbbkana_l.S \
	stub__ismbbkprint.S \
	imp__ismbbkprint.S \
	stub__ismbbkprint_l.S \
	imp__ismbbkprint_l.S \
	stub__ismbbkpunct.S \
	imp__ismbbkpunct.S \
	stub__ismbbkpunct_l.S \
	imp__ismbbkpunct_l.S \
	stub__ismbblead.S \
	imp__ismbblead.S \
	stub__ismbblead_l.S \
	imp__ismbblead_l.S \
	stub__ismbbprint.S \
	imp__ismbbprint.S \
	stub__ismbbprint_l.S \
	imp__ismbbprint_l.S \
	stub__ismbbpunct.S \
	imp__ismbbpunct.S \
	stub__ismbbpunct_l.S \
	imp__ismbbpunct_l.S \
	stub__ismbbtrail.S \
	imp__ismbbtrail.S \
	stub__ismbbtrail_l.S \
	imp__ismbbtrail_l.S \
	stub__ismbcalnum.S \
	imp__ismbcalnum.S \
	stub__ismbcalnum_l.S \
	imp__ismbcalnum_l.S \
	stub__ismbcalpha.S \
	imp__ismbcalpha.S \
	stub__ismbcalpha_l.S \
	imp__ismbcalpha_l.S \
	stub__ismbcdigit.S \
	imp__ismbcdigit.S \
	stub__ismbcdigit_l.S \
	imp__ismbcdigit_l.S \
	stub__ismbcgraph.S \
	imp__ismbcgraph.S \
	stub__ismbcgraph_l.S \
	imp__ismbcgraph_l.S \
	stub__ismbchira.S \
	imp__ismbchira.S \
	stub__ismbchira_l.S \
	imp__ismbchira_l.S \
	stub__ismbckata.S \
	imp__ismbckata.S \
	stub__ismbckata_l.S \
	imp__ismbckata_l.S \
	stub__ismbcl0.S \
	imp__ismbcl0.S \
	stub__ismbcl0_l.S \
	imp__ismbcl0_l.S \
	stub__ismbcl1.S \
	imp__ismbcl1.S \
	stub__ismbcl1_l.S \
	imp__ismbcl1_l.S \
	stub__ismbcl2.S \
	imp__ismbcl2.S \
	stub__ismbcl2_l.S \
	imp__ismbcl2_l.S \
	stub__ismbclegal.S \
	imp__ismbclegal.S \
	stub__ismbclegal_l.S \
	imp__ismbclegal_l.S \
	stub__ismbclower.S \
	imp__ismbclower.S \
	stub__ismbclower_l.S \
	imp__ismbclower_l.S \
	stub__ismbcprint.S \
	imp__ismbcprint.S \
	stub__ismbcprint_l.S \
	imp__ismbcprint_l.S \
	stub__ismbcpunct.S \
	imp__ismbcpunct.S \
	stub__ismbcpunct_l.S \
	imp__ismbcpunct_l.S \
	stub__ismbcspace.S \
	imp__ismbcspace.S \
	stub__ismbcspace_l.S \
	imp__ismbcspace_l.S \
	stub__ismbcsymbol.S \
	imp__ismbcsymbol.S \
	stub__ismbcsymbol_l.S \
	imp__ismbcsymbol_l.S \
	stub__ismbcupper.S \
	imp__ismbcupper.S \
	stub__ismbcupper_l.S \
	imp__ismbcupper_l.S \
	stub__ismbslead.S \
	imp__ismbslead.S \
	stub__ismbslead_l.S \
	imp__ismbslead_l.S \
	stub__ismbstrail.S \
	imp__ismbstrail.S \
	stub__ismbstrail_l.S \
	imp__ismbstrail_l.S \
	stub__isnan.S \
	imp__isnan.S \
	stub__isnanf.S \
	imp__isnanf.S \
	stub__isprint_l.S \
	imp__isprint_l.S \
	stub__isspace_l.S \
	imp__isspace_l.S \
	stub__isupper_l.S \
	imp__isupper_l.S \
	stub__iswalnum_l.S \
	imp__iswalnum_l.S \
	stub__iswalpha_l.S \
	imp__iswalpha_l.S \
	stub__iswcntrl_l.S \
	imp__iswcntrl_l.S \
	stub__iswctype_l.S \
	imp__iswctype_l.S \
	stub__iswdigit_l.S \
	imp__iswdigit_l.S \
	stub__iswgraph_l.S \
	imp__iswgraph_l.S \
	stub__iswlower_l.S \
	imp__iswlower_l.S \
	stub__iswprint_l.S \
	imp__iswprint_l.S \
	stub__iswpunct_l.S \
	imp__iswpunct_l.S \
	stub__iswspace_l.S \
	imp__iswspace_l.S \
	stub__iswupper_l.S \
	imp__iswupper_l.S \
	stub__iswxdigit_l.S \
	imp__iswxdigit_l.S \
	stub__isxdigit_l.S \
	imp__isxdigit_l.S \
	stub__itoa.S \
	imp__itoa.S \
	stub__itoa_s.S \
	imp__itoa_s.S \
	stub__itow.S \
	imp__itow.S \
	stub__itow_s.S \
	imp__itow_s.S \
	stub__j0.S \
	imp__j0.S \
	stub__j1.S \
	imp__j1.S \
	stub__jn.S \
	imp__jn.S \
	stub__kbhit.S \
	imp__kbhit.S \
	stub__lfind.S \
	imp__lfind.S \
	stub__loaddll.S \
	imp__loaddll.S \
	stub__lfind_s.S \
	imp__lfind_s.S \
	stub__local_unwind.S \
	imp__local_unwind.S \
	stub__localtime32.S \
	imp__localtime32.S \
	stub__localtime64.S \
	imp__localtime64.S \
	stub__lock.S \
	imp__lock.S \
	stub__locking.S \
	imp__locking.S \
	stub__logb.S \
	imp__logb.S \
	stub__logbf.S \
	imp__logbf.S \
	stub__lrotl.S \
	imp__lrotl.S \
	stub__lrotr.S \
	imp__lrotr.S \
	stub__lsearch.S \
	imp__lsearch.S \
	stub__lsearch_s.S \
	imp__lsearch_s.S \
	stub__lseek.S \
	imp__lseek.S \
	stub__lseeki64.S \
	imp__lseeki64.S \
	stub__ltoa.S \
	imp__ltoa.S \
	stub__ltoa_s.S \
	imp__ltoa_s.S \
	stub__ltow.S \
	imp__ltow.S \
	stub__ltow_s.S \
	imp__ltow_s.S \
	stub__makepath.S \
	imp__makepath.S \
	stub__makepath_s.S \
	imp__makepath_s.S \
	stub__mbbtombc.S \
	imp__mbbtombc.S \
	stub__mbbtombc_l.S \
	imp__mbbtombc_l.S \
	stub__mbbtype.S \
	imp__mbbtype.S \
	imp__mbcasemap.S \
	stub__mbccpy.S \
	imp__mbccpy.S \
	stub__mbccpy_l.S \
	imp__mbccpy_l.S \
	stub__mbccpy_s.S \
	imp__mbccpy_s.S \
	stub__mbccpy_s_l.S \
	imp__mbccpy_s_l.S \
	stub__mbcjistojms.S \
	imp__mbcjistojms.S \
	stub__mbcjistojms_l.S \
	imp__mbcjistojms_l.S \
	stub__mbcjmstojis.S \
	imp__mbcjmstojis.S \
	stub__mbcjmstojis_l.S \
	imp__mbcjmstojis_l.S \
	stub__mbclen.S \
	imp__mbclen.S \
	stub__mbclen_l.S \
	imp__mbclen_l.S \
	stub__mbctohira.S \
	imp__mbctohira.S \
	stub__mbctohira_l.S \
	imp__mbctohira_l.S \
	stub__mbctokata.S \
	imp__mbctokata.S \
	stub__mbctokata_l.S \
	imp__mbctokata_l.S \
	stub__mbctolower.S \
	imp__mbctolower.S \
	stub__mbctolower_l.S \
	imp__mbctolower_l.S \
	stub__mbctombb.S \
	imp__mbctombb.S \
	stub__mbctombb_l.S \
	imp__mbctombb_l.S \
	stub__mbctoupper.S \
	imp__mbctoupper.S \
	stub__mbctoupper_l.S \
	imp__mbctoupper_l.S \
	imp__mbctype.S \
	stub__mblen_l.S \
	imp__mblen_l.S \
	stub__mbsbtype.S \
	imp__mbsbtype.S \
	stub__mbsbtype_l.S \
	imp__mbsbtype_l.S \
	stub__mbscat.S \
	imp__mbscat.S \
	stub__mbscat_s.S \
	imp__mbscat_s.S \
	stub__mbscat_s_l.S \
	imp__mbscat_s_l.S \
	stub__mbschr.S \
	imp__mbschr.S \
	stub__mbschr_l.S \
	imp__mbschr_l.S \
	stub__mbscmp.S \
	imp__mbscmp.S \
	stub__mbscmp_l.S \
	imp__mbscmp_l.S \
	stub__mbscoll.S \
	imp__mbscoll.S \
	stub__mbscoll_l.S \
	imp__mbscoll_l.S \
	stub__mbscpy.S \
	imp__mbscpy.S \
	stub__mbscpy_s.S \
	imp__mbscpy_s.S \
	stub__mbscpy_s_l.S \
	imp__mbscpy_s_l.S \
	stub__mbscspn.S \
	imp__mbscspn.S \
	stub__mbscspn_l.S \
	imp__mbscspn_l.S \
	stub__mbsdec.S \
	imp__mbsdec.S \
	stub__mbsdec_l.S \
	imp__mbsdec_l.S \
	stub__mbsdup.S \
	imp__mbsdup.S \
	stub__mbsicmp.S \
	imp__mbsicmp.S \
	stub__mbsicmp_l.S \
	imp__mbsicmp_l.S \
	stub__mbsicoll.S \
	imp__mbsicoll.S \
	stub__mbsicoll_l.S \
	imp__mbsicoll_l.S \
	stub__mbsinc.S \
	imp__mbsinc.S \
	stub__mbsinc_l.S \
	imp__mbsinc_l.S \
	stub__mbslen.S \
	imp__mbslen.S \
	stub__mbslen_l.S \
	imp__mbslen_l.S \
	stub__mbslwr.S \
	imp__mbslwr.S \
	stub__mbslwr_l.S \
	imp__mbslwr_l.S \
	stub__mbslwr_s.S \
	imp__mbslwr_s.S \
	stub__mbslwr_s_l.S \
	imp__mbslwr_s_l.S \
	stub__mbsnbcat.S \
	imp__mbsnbcat.S \
	stub__mbsnbcat_l.S \
	imp__mbsnbcat_l.S \
	stub__mbsnbcat_s.S \
	imp__mbsnbcat_s.S \
	stub__mbsnbcat_s_l.S \
	imp__mbsnbcat_s_l.S \
	stub__mbsnbcmp.S \
	imp__mbsnbcmp.S \
	stub__mbsnbcmp_l.S \
	imp__mbsnbcmp_l.S \
	stub__mbsnbcnt.S \
	imp__mbsnbcnt.S \
	stub__mbsnbcnt_l.S \
	imp__mbsnbcnt_l.S \
	stub__mbsnbcoll.S \
	imp__mbsnbcoll.S \
	stub__mbsnbcoll_l.S \
	imp__mbsnbcoll_l.S \
	stub__mbsnbcpy.S \
	imp__mbsnbcpy.S \
	stub__mbsnbcpy_l.S \
	imp__mbsnbcpy_l.S \
	stub__mbsnbcpy_s.S \
	imp__mbsnbcpy_s.S \
	stub__mbsnbcpy_s_l.S \
	imp__mbsnbcpy_s_l.S \
	stub__mbsnbicmp.S \
	imp__mbsnbicmp.S \
	stub__mbsnbicmp_l.S \
	imp__mbsnbicmp_l.S \
	stub__mbsnbicoll.S \
	imp__mbsnbicoll.S \
	stub__mbsnbicoll_l.S \
	imp__mbsnbicoll_l.S \
	stub__mbsnbset.S \
	imp__mbsnbset.S \
	stub__mbsnbset_l.S \
	imp__mbsnbset_l.S \
	stub__mbsnbset_s.S \
	imp__mbsnbset_s.S \
	stub__mbsnbset_s_l.S \
	imp__mbsnbset_s_l.S \
	stub__mbsncat.S \
	imp__mbsncat.S \
	stub__mbsncat_l.S \
	imp__mbsncat_l.S \
	stub__mbsncat_s.S \
	imp__mbsncat_s.S \
	stub__mbsncat_s_l.S \
	imp__mbsncat_s_l.S \
	stub__mbsnccnt.S \
	imp__mbsnccnt.S \
	stub__mbsnccnt_l.S \
	imp__mbsnccnt_l.S \
	stub__mbsncmp.S \
	imp__mbsncmp.S \
	stub__mbsncmp_l.S \
	imp__mbsncmp_l.S \
	stub__mbsncoll.S \
	imp__mbsncoll.S \
	stub__mbsncoll_l.S \
	imp__mbsncoll_l.S \
	stub__mbsncpy.S \
	imp__mbsncpy.S \
	stub__mbsncpy_l.S \
	imp__mbsncpy_l.S \
	stub__mbsncpy_s.S \
	imp__mbsncpy_s.S \
	stub__mbsncpy_s_l.S \
	imp__mbsncpy_s_l.S \
	stub__mbsnextc.S \
	imp__mbsnextc.S \
	stub__mbsnextc_l.S \
	imp__mbsnextc_l.S \
	stub__mbsnicmp.S \
	imp__mbsnicmp.S \
	stub__mbsnicmp_l.S \
	imp__mbsnicmp_l.S \
	stub__mbsnicoll.S \
	imp__mbsnicoll.S \
	stub__mbsnicoll_l.S \
	imp__mbsnicoll_l.S \
	stub__mbsninc.S \
	imp__mbsninc.S \
	stub__mbsninc_l.S \
	imp__mbsninc_l.S \
	stub__mbsnlen.S \
	imp__mbsnlen.S \
	stub__mbsnlen_l.S \
	imp__mbsnlen_l.S \
	stub__mbsnset.S \
	imp__mbsnset.S \
	stub__mbsnset_l.S \
	imp__mbsnset_l.S \
	stub__mbsnset_s.S \
	imp__mbsnset_s.S \
	stub__mbsnset_s_l.S \
	imp__mbsnset_s_l.S \
	stub__mbspbrk.S \
	imp__mbspbrk.S \
	stub__mbspbrk_l.S \
	imp__mbspbrk_l.S \
	stub__mbsrchr.S \
	imp__mbsrchr.S \
	stub__mbsrchr_l.S \
	imp__mbsrchr_l.S \
	stub__mbsrev.S \
	imp__mbsrev.S \
	stub__mbsrev_l.S \
	imp__mbsrev_l.S \
	stub__mbsset.S \
	imp__mbsset.S \
	stub__mbsset_l.S \
	imp__mbsset_l.S \
	stub__mbsset_s.S \
	imp__mbsset_s.S \
	stub__mbsset_s_l.S \
	imp__mbsset_s_l.S \
	stub__mbsspn.S \
	imp__mbsspn.S \
	stub__mbsspn_l.S \
	imp__mbsspn_l.S \
	stub__mbsspnp.S \
	imp__mbsspnp.S \
	stub__mbsspnp_l.S \
	imp__mbsspnp_l.S \
	stub__mbsstr.S \
	imp__mbsstr.S \
	stub__mbsstr_l.S \
	imp__mbsstr_l.S \
	stub__mbstok.S \
	imp__mbstok.S \
	stub__mbstok_l.S \
	imp__mbstok_l.S \
	stub__mbstok_s.S \
	imp__mbstok_s.S \
	stub__mbstok_s_l.S \
	imp__mbstok_s_l.S \
	stub__mbstowcs_l.S \
	imp__mbstowcs_l.S \
	stub__mbstowcs_s_l.S \
	imp__mbstowcs_s_l.S \
	stub__mbstrlen.S \
	imp__mbstrlen.S \
	stub__mbstrlen_l.S \
	imp__mbstrlen_l.S \
	stub__mbstrnlen.S \
	imp__mbstrnlen.S \
	stub__mbstrnlen_l.S \
	imp__mbstrnlen_l.S \
	stub__mbsupr.S \
	imp__mbsupr.S \
	stub__mbsupr_l.S \
	imp__mbsupr_l.S \
	stub__mbsupr_s.S \
	imp__mbsupr_s.S \
	stub__mbsupr_s_l.S \
	imp__mbsupr_s_l.S \
	stub__mbtowc_l.S \
	imp__mbtowc_l.S \
	stub__memccpy.S \
	imp__memccpy.S \
	stub__memicmp.S \
	imp__memicmp.S \
	stub__memicmp_l.S \
	imp__memicmp_l.S \
	stub__mkdir.S \
	imp__mkdir.S \
	stub__mkgmtime.S \
	imp__mkgmtime.S \
	stub__mkgmtime64.S \
	imp__mkgmtime64.S \
	stub__mktemp.S \
	imp__mktemp.S \
	stub__mktime64.S \
	imp__mktime64.S \
	stub__msize.S \
	imp__msize.S \
	stub__nextafter.S \
	imp__nextafter.S \
	stub__nextafterf.S \
	imp__nextafterf.S \
	stub__onexit.S \
	imp__onexit.S \
	stub__open.S \
	imp__open.S \
	stub__open_osfhandle.S \
	imp__open_osfhandle.S \
	imp__osplatform.S \
	imp__osver.S \
	stub__pclose.S \
	imp__pclose.S \
	imp__pctype.S \
	imp__pgmptr.S \
	stub__pipe.S \
	imp__pipe.S \
	stub__popen.S \
	imp__popen.S \
	stub__printf_l.S \
	imp__printf_l.S \
	stub__printf_p.S \
	imp__printf_p.S \
	stub__printf_p_l.S \
	imp__printf_p_l.S \
	stub__printf_s_l.S \
	imp__printf_s_l.S \
	stub__purecall.S \
	imp__purecall.S \
	stub__putch.S \
	imp__putch.S \
	stub__putenv.S \
	imp__putenv.S \
	stub__putenv_s.S \
	imp__putenv_s.S \
	stub__putw.S \
	imp__putw.S \
	stub__putwch.S \
	imp__putwch.S \
	stub__putws.S \
	imp__putws.S \
	imp__pwctype.S \
	stub__read.S \
	imp__read.S \
	stub__resetstkoflw.S \
	imp__resetstkoflw.S \
	stub__rmdir.S \
	imp__rmdir.S \
	stub__rmtmp.S \
	imp__rmtmp.S \
	stub__rotl.S \
	imp__rotl.S \
	stub__rotl64.S \
	imp__rotl64.S \
	stub__rotr.S \
	imp__rotr.S \
	stub__rotr64.S \
	imp__rotr64.S \
	stub__scalb.S \
	imp__scalb.S \
	stub__scalbf.S \
	imp__scalbf.S \
	stub__scanf_l.S \
	imp__scanf_l.S \
	stub__scanf_s_l.S \
	imp__scanf_s_l.S \
	stub__scprintf.S \
	imp__scprintf.S \
	stub__scprintf_l.S \
	imp__scprintf_l.S \
	stub__scprintf_p_l.S \
	imp__scprintf_p_l.S \
	stub__scwprintf.S \
	imp__scwprintf.S \
	stub__scwprintf_l.S \
	imp__scwprintf_l.S \
	stub__scwprintf_p_l.S \
	imp__scwprintf_p_l.S \
	stub__searchenv.S \
	imp__searchenv.S \
	stub__searchenv_s.S \
	imp__searchenv_s.S \
	stub__set_error_mode.S \
	imp__set_error_mode.S \
	stub__set_sbh_threshold.S \
	imp__set_sbh_threshold.S \
	stub__seterrormode.S \
	imp__seterrormode.S \
	stub__setjmp.S \
	imp__setjmp.S \
	stub__setjmpex.S \
	imp__setjmpex.S \
	stub__setmaxstdio.S \
	imp__setmaxstdio.S \
	stub__setmbcp.S \
	imp__setmbcp.S \
	stub__setmode.S \
	imp__setmode.S \
	stub__setsystime.S \
	imp__setsystime.S \
	stub__sleep.S \
	imp__sleep.S \
	stub__snprintf.S \
	imp__snprintf.S \
	stub__snprintf_c.S \
	imp__snprintf_c.S \
	stub__snprintf_c_l.S \
	imp__snprintf_c_l.S \
	stub__snprintf_l.S \
	imp__snprintf_l.S \
	stub__snprintf_s.S \
	imp__snprintf_s.S \
	stub__snprintf_s_l.S \
	imp__snprintf_s_l.S \
	stub__snscanf.S \
	imp__snscanf.S \
	stub__snscanf_l.S \
	imp__snscanf_l.S \
	stub__snscanf_s.S \
	imp__snscanf_s.S \
	stub__snscanf_s_l.S \
	imp__snscanf_s_l.S \
	stub__snwprintf.S \
	imp__snwprintf.S \
	stub__snwprintf_l.S \
	imp__snwprintf_l.S \
	stub__snwprintf_s.S \
	imp__snwprintf_s.S \
	stub__snwprintf_s_l.S \
	imp__snwprintf_s_l.S \
	stub__snwscanf.S \
	imp__snwscanf.S \
	stub__snwscanf_l.S \
	imp__snwscanf_l.S \
	stub__snwscanf_s.S \
	imp__snwscanf_s.S \
	stub__snwscanf_s_l.S \
	imp__snwscanf_s_l.S \
	stub__sopen.S \
	imp__sopen.S \
	stub__sopen_s.S \
	imp__sopen_s.S \
	stub__spawnl.S \
	imp__spawnl.S \
	stub__spawnle.S \
	imp__spawnle.S \
	stub__spawnlp.S \
	imp__spawnlp.S \
	stub__spawnlpe.S \
	imp__spawnlpe.S \
	stub__spawnv.S \
	imp__spawnv.S \
	stub__spawnve.S \
	imp__spawnve.S \
	stub__spawnvp.S \
	imp__spawnvp.S \
	stub__spawnvpe.S \
	imp__spawnvpe.S \
	stub__splitpath.S \
	imp__splitpath.S \
	stub__splitpath_s.S \
	imp__splitpath_s.S \
	stub__sprintf_l.S \
	imp__sprintf_l.S \
	stub__sprintf_p_l.S \
	imp__sprintf_p_l.S \
	stub__sprintf_s_l.S \
	imp__sprintf_s_l.S \
	stub__sscanf_l.S \
	imp__sscanf_l.S \
	stub__sscanf_s_l.S \
	imp__sscanf_s_l.S \
	stub__stat.S \
	imp__stat.S \
	stub__stat64.S \
	imp__stat64.S \
	stub__stati64.S \
	imp__stati64.S \
	stub__statusfp.S \
	imp__statusfp.S \
	stub__strcmpi.S \
	imp__strcmpi.S \
	stub__strcoll_l.S \
	imp__strcoll_l.S \
	stub__strdate.S \
	imp__strdate.S \
	stub__strdup.S \
	imp__strdup.S \
	stub__strerror.S \
	imp__strerror.S \
	stub__strerror_s.S \
	imp__strerror_s.S \
	stub__stricmp.S \
	imp__stricmp.S \
	stub__stricmp_l.S \
	imp__stricmp_l.S \
	stub__stricoll.S \
	imp__stricoll.S \
	stub__stricoll_l.S \
	imp__stricoll_l.S \
	stub__strlwr.S \
	imp__strlwr.S \
	stub__strlwr_l.S \
	imp__strlwr_l.S \
	stub__strlwr_s.S \
	imp__strlwr_s.S \
	stub__strlwr_s_l.S \
	imp__strlwr_s_l.S \
	stub__strncoll.S \
	imp__strncoll.S \
	stub__strncoll_l.S \
	imp__strncoll_l.S \
	stub__strnicmp.S \
	imp__strnicmp.S \
	stub__strnicmp_l.S \
	imp__strnicmp_l.S \
	stub__strnicoll.S \
	imp__strnicoll.S \
	stub__strnicoll_l.S \
	imp__strnicoll_l.S \
	stub__strnset.S \
	imp__strnset.S \
	stub__strnset_s.S \
	imp__strnset_s.S \
	stub__strrev.S \
	imp__strrev.S \
	stub__strset.S \
	imp__strset.S \
	stub__strset_s.S \
	imp__strset_s.S \
	stub__strtime.S \
	imp__strtime.S \
	stub__strtod_l.S \
	imp__strtod_l.S \
	stub__strtoi64.S \
	imp__strtoi64.S \
	stub__strtoi64_l.S \
	imp__strtoi64_l.S \
	stub__strtol_l.S \
	imp__strtol_l.S \
	stub__strtoui64.S \
	imp__strtoui64.S \
	stub__strtoui64_l.S \
	imp__strtoui64_l.S \
	stub__strtoul_l.S \
	imp__strtoul_l.S \
	stub__strupr.S \
	imp__strupr.S \
	stub__strupr_l.S \
	imp__strupr_l.S \
	stub__strupr_s.S \
	imp__strupr_s.S \
	stub__strupr_s_l.S \
	imp__strupr_s_l.S \
	stub__strxfrm_l.S \
	imp__strxfrm_l.S \
	stub__swab.S \
	imp__swab.S \
	stub__swprintf_c.S \
	imp__swprintf_c.S \
	stub__swprintf_c_l.S \
	imp__swprintf_c_l.S \
	stub__swprintf_p_l.S \
	imp__swprintf_p_l.S \
	stub__swprintf_s_l.S \
	imp__swprintf_s_l.S \
	stub__swscanf_l.S \
	imp__swscanf_l.S \
	stub__swscanf_s_l.S \
	imp__swscanf_s_l.S \
	imp__sys_errlist.S \
	imp__sys_nerr.S \
	stub__tell.S \
	imp__tell.S \
	stub__telli64.S \
	imp__telli64.S \
	stub__tempnam.S \
	imp__tempnam.S \
	stub__time64.S \
	imp__time64.S \
	stub__tolower.S \
	imp__tolower.S \
	stub__tolower_l.S \
	imp__tolower_l.S \
	stub__toupper.S \
	imp__toupper.S \
	stub__toupper_l.S \
	imp__toupper_l.S \
	stub__towlower_l.S \
	imp__towlower_l.S \
	stub__towupper_l.S \
	imp__towupper_l.S \
	stub__tzset.S \
	imp__tzset.S \
	stub__ui64toa.S \
	imp__ui64toa.S \
	stub__ui64toa_s.S \
	imp__ui64toa_s.S \
	stub__ui64tow.S \
	imp__ui64tow.S \
	stub__ui64tow_s.S \
	imp__ui64tow_s.S \
	stub__ultoa.S \
	imp__ultoa.S \
	stub__ultoa_s.S \
	imp__ultoa_s.S \
	stub__ultow.S \
	imp__ultow.S \
	stub__ultow_s.S \
	imp__ultow_s.S \
	stub__umask.S \
	imp__umask.S \
	stub__ungetch.S \
	imp__ungetch.S \
	stub__ungetwch.S \
	imp__ungetwch.S \
	stub__unlink.S \
	imp__unlink.S \
	stub__unloaddll.S \
	imp__unloaddll.S \
	stub__unlock.S \
	imp__unlock.S \
	stub__utime.S \
	imp__utime.S \
	stub__utime64.S \
	imp__utime64.S \
	stub__vcprintf.S \
	imp__vcprintf.S \
	stub__vcprintf_l.S \
	imp__vcprintf_l.S \
	stub__vcprintf_p.S \
	imp__vcprintf_p.S \
	stub__vcprintf_p_l.S \
	imp__vcprintf_p_l.S \
	stub__vcwprintf.S \
	imp__vcwprintf.S \
	stub__vcwprintf_l.S \
	imp__vcwprintf_l.S \
	stub__vcwprintf_p.S \
	imp__vcwprintf_p.S \
	stub__vcwprintf_p_l.S \
	imp__vcwprintf_p_l.S \
	stub__vfprintf_l.S \
	imp__vfprintf_l.S \
	stub__vfprintf_p.S \
	imp__vfprintf_p.S \
	stub__vfprintf_p_l.S \
	imp__vfprintf_p_l.S \
	stub__vfprintf_s_l.S \
	imp__vfprintf_s_l.S \
	stub__vfwprintf_l.S \
	imp__vfwprintf_l.S \
	stub__vfwprintf_p.S \
	imp__vfwprintf_p.S \
	stub__vfwprintf_p_l.S \
	imp__vfwprintf_p_l.S \
	stub__vfwprintf_s_l.S \
	imp__vfwprintf_s_l.S \
	stub__vprintf_l.S \
	imp__vprintf_l.S \
	stub__vprintf_p.S \
	imp__vprintf_p.S \
	stub__vprintf_p_l.S \
	imp__vprintf_p_l.S \
	stub__vprintf_s_l.S \
	imp__vprintf_s_l.S \
	stub__vscprintf.S \
	imp__vscprintf.S \
	stub__vscprintf_l.S \
	imp__vscprintf_l.S \
	stub__vscprintf_p_l.S \
	imp__vscprintf_p_l.S \
	stub__vscwprintf.S \
	imp__vscwprintf.S \
	stub__vscwprintf_l.S \
	imp__vscwprintf_l.S \
	stub__vscwprintf_p_l.S \
	imp__vscwprintf_p_l.S \
	stub__vsnprintf.S \
	imp__vsnprintf.S \
	stub__vsnprintf_c.S \
	imp__vsnprintf_c.S \
	stub__vsnprintf_c_l.S \
	imp__vsnprintf_c_l.S \
	stub__vsnprintf_l.S \
	imp__vsnprintf_l.S \
	stub__vsnprintf_s.S \
	imp__vsnprintf_s.S \
	stub__vsnprintf_s_l.S \
	imp__vsnprintf_s_l.S \
	stub__vsnwprintf.S \
	imp__vsnwprintf.S \
	stub__vsnwprintf_l.S \
	imp__vsnwprintf_l.S \
	stub__vsnwprintf_s.S \
	imp__vsnwprintf_s.S \
	stub__vsnwprintf_s_l.S \
	imp__vsnwprintf_s_l.S \
	stub__vsprintf_l.S \
	imp__vsprintf_l.S \
	stub__vsprintf_p.S \
	imp__vsprintf_p.S \
	stub__vsprintf_p_l.S \
	imp__vsprintf_p_l.S \
	stub__vsprintf_s_l.S \
	imp__vsprintf_s_l.S \
	stub__vswprintf.S \
	imp__vswprintf.S \
	stub__vswprintf_c.S \
	imp__vswprintf_c.S \
	stub__vswprintf_c_l.S \
	imp__vswprintf_c_l.S \
	stub__vswprintf_l.S \
	imp__vswprintf_l.S \
	stub__vswprintf_p_l.S \
	imp__vswprintf_p_l.S \
	stub__vswprintf_s_l.S \
	imp__vswprintf_s_l.S \
	stub__vwprintf_l.S \
	imp__vwprintf_l.S \
	stub__vwprintf_p.S \
	imp__vwprintf_p.S \
	stub__vwprintf_p_l.S \
	imp__vwprintf_p_l.S \
	stub__vwprintf_s_l.S \
	imp__vwprintf_s_l.S \
	stub__waccess.S \
	imp__waccess.S \
	stub__wasctime.S \
	imp__wasctime.S \
	stub__wchdir.S \
	imp__wchdir.S \
	stub__wchmod.S \
	imp__wchmod.S \
	imp__wcmdln.S \
	stub__wcreat.S \
	imp__wcreat.S \
	stub__wcscoll_l.S \
	imp__wcscoll_l.S \
	stub__wcsdup.S \
	imp__wcsdup.S \
	stub__wcserror.S \
	imp__wcserror.S \
	stub__wcserror_s.S \
	imp__wcserror_s.S \
	stub__wcsftime_l.S \
	imp__wcsftime_l.S \
	stub__wcsicmp.S \
	imp__wcsicmp.S \
	stub__wcsicmp_l.S \
	imp__wcsicmp_l.S \
	stub__wcsicoll.S \
	imp__wcsicoll.S \
	stub__wcsicoll_l.S \
	imp__wcsicoll_l.S \
	stub__wcslwr.S \
	imp__wcslwr.S \
	stub__wcslwr_l.S \
	imp__wcslwr_l.S \
	stub__wcslwr_s.S \
	imp__wcslwr_s.S \
	stub__wcslwr_s_l.S \
	imp__wcslwr_s_l.S \
	stub__wcsncoll.S \
	imp__wcsncoll.S \
	stub__wcsncoll_l.S \
	imp__wcsncoll_l.S \
	stub__wcsnicmp.S \
	imp__wcsnicmp.S \
	stub__wcsnicmp_l.S \
	imp__wcsnicmp_l.S \
	stub__wcsnicoll.S \
	imp__wcsnicoll.S \
	stub__wcsnicoll_l.S \
	imp__wcsnicoll_l.S \
	stub__wcsnset.S \
	imp__wcsnset.S \
	stub__wcsnset_s.S \
	imp__wcsnset_s.S \
	stub__wcsrev.S \
	imp__wcsrev.S \
	stub__wcsset.S \
	imp__wcsset.S \
	stub__wcsset_s.S \
	imp__wcsset_s.S \
	stub__wcstoi64.S \
	imp__wcstoi64.S \
	stub__wcstoi64_l.S \
	imp__wcstoi64_l.S \
	stub__wcstol_l.S \
	imp__wcstol_l.S \
	stub__wcstombs_l.S \
	imp__wcstombs_l.S \
	stub__wcstombs_s_l.S \
	imp__wcstombs_s_l.S \
	stub__wcstoui64.S \
	imp__wcstoui64.S \
	stub__wcstoui64_l.S \
	imp__wcstoui64_l.S \
	stub__wcstoul_l.S \
	imp__wcstoul_l.S \
	stub__wcsupr.S \
	imp__wcsupr.S \
	stub__wcsupr_l.S \
	imp__wcsupr_l.S \
	stub__wcsupr_s.S \
	imp__wcsupr_s.S \
	stub__wcsupr_s_l.S \
	imp__wcsupr_s_l.S \
	stub__wcsxfrm_l.S \
	imp__wcsxfrm_l.S \
	stub__wctime.S \
	imp__wctime.S \
	stub__wctime64.S \
	imp__wctime64.S \
	stub__wctomb_l.S \
	imp__wctomb_l.S \
	stub__wctomb_s_l.S \
	imp__wctomb_s_l.S \
	stub__wctype.S \
	imp__wctype.S \
	imp__wenviron.S \
	stub__wexecl.S \
	imp__wexecl.S \
	stub__wexecle.S \
	imp__wexecle.S \
	stub__wexeclp.S \
	imp__wexeclp.S \
	stub__wexeclpe.S \
	imp__wexeclpe.S \
	stub__wexecv.S \
	imp__wexecv.S \
	stub__wexecve.S \
	imp__wexecve.S \
	stub__wexecvp.S \
	imp__wexecvp.S \
	stub__wexecvpe.S \
	imp__wexecvpe.S \
	stub__wfdopen.S \
	imp__wfdopen.S \
	stub__wfindfirst.S \
	imp__wfindfirst.S \
	stub__wfindfirst64.S \
	imp__wfindfirst64.S \
	stub__wfindfirsti64.S \
	imp__wfindfirsti64.S \
	stub__wfindnext.S \
	imp__wfindnext.S \
	stub__wfindnext64.S \
	imp__wfindnext64.S \
	stub__wfindnexti64.S \
	imp__wfindnexti64.S \
	stub__wfopen.S \
	imp__wfopen.S \
	stub__wfopen_s.S \
	imp__wfopen_s.S \
	stub__wfreopen.S \
	imp__wfreopen.S \
	stub__wfreopen_s.S \
	imp__wfreopen_s.S \
	stub__wfsopen.S \
	imp__wfsopen.S \
	stub__wfullpath.S \
	imp__wfullpath.S \
	stub__wgetcwd.S \
	imp__wgetcwd.S \
	stub__wgetdcwd.S \
	imp__wgetdcwd.S \
	stub__wgetenv.S \
	imp__wgetenv.S \
	stub__wgetenv_s.S \
	imp__wgetenv_s.S \
	imp__winmajor.S \
	imp__winminor.S \
	stub__winput_s.S \
	imp__winput_s.S \
	imp__winver.S \
	stub__wmakepath.S \
	imp__wmakepath.S \
	stub__wmakepath_s.S \
	imp__wmakepath_s.S \
	stub__wmkdir.S \
	imp__wmkdir.S \
	stub__wmktemp.S \
	imp__wmktemp.S \
	stub__wopen.S \
	imp__wopen.S \
	stub__woutput_s.S \
	imp__woutput_s.S \
	stub__wperror.S \
	imp__wperror.S \
	imp__wpgmptr.S \
	stub__wpopen.S \
	imp__wpopen.S \
	stub__wprintf_l.S \
	imp__wprintf_l.S \
	stub__wprintf_p.S \
	imp__wprintf_p.S \
	stub__wprintf_p_l.S \
	imp__wprintf_p_l.S \
	stub__wprintf_s_l.S \
	imp__wprintf_s_l.S \
	stub__wputenv.S \
	imp__wputenv.S \
	stub__wputenv_s.S \
	imp__wputenv_s.S \
	stub__wremove.S \
	imp__wremove.S \
	stub__wrename.S \
	imp__wrename.S \
	stub__write.S \
	imp__write.S \
	stub__wrmdir.S \
	imp__wrmdir.S \
	stub__wscanf_l.S \
	imp__wscanf_l.S \
	stub__wscanf_s_l.S \
	imp__wscanf_s_l.S \
	stub__wsearchenv.S \
	imp__wsearchenv.S \
	stub__wsearchenv_s.S \
	imp__wsearchenv_s.S \
	stub__wsetlocale.S \
	imp__wsetlocale.S \
	stub__wsopen.S \
	imp__wsopen.S \
	stub__wsopen_s.S \
	imp__wsopen_s.S \
	stub__wspawnl.S \
	imp__wspawnl.S \
	stub__wspawnle.S \
	imp__wspawnle.S \
	stub__wspawnlp.S \
	imp__wspawnlp.S \
	stub__wspawnlpe.S \
	imp__wspawnlpe.S \
	stub__wspawnv.S \
	imp__wspawnv.S \
	stub__wspawnve.S \
	imp__wspawnve.S \
	stub__wspawnvp.S \
	imp__wspawnvp.S \
	stub__wspawnvpe.S \
	imp__wspawnvpe.S \
	stub__wsplitpath.S \
	imp__wsplitpath.S \
	stub__wsplitpath_s.S \
	imp__wsplitpath_s.S \
	stub__wstat.S \
	imp__wstat.S \
	stub__wstat64.S \
	imp__wstat64.S \
	stub__wstati64.S \
	imp__wstati64.S \
	stub__wstrdate.S \
	imp__wstrdate.S \
	stub__wstrtime.S \
	imp__wstrtime.S \
	stub__wsystem.S \
	imp__wsystem.S \
	stub__wtempnam.S \
	imp__wtempnam.S \
	stub__wtmpnam.S \
	imp__wtmpnam.S \
	stub__wtmpnam_s.S \
	imp__wtmpnam_s.S \
	stub__wtof.S \
	imp__wtof.S \
	stub__wtof_l.S \
	imp__wtof_l.S \
	stub__wtoi.S \
	imp__wtoi.S \
	stub__wtoi64.S \
	imp__wtoi64.S \
	stub__wtoi64_l.S \
	imp__wtoi64_l.S \
	stub__wtoi_l.S \
	imp__wtoi_l.S \
	stub__wtol.S \
	imp__wtol.S \
	stub__wtol_l.S \
	imp__wtol_l.S \
	stub__wunlink.S \
	imp__wunlink.S \
	stub__wutime.S \
	imp__wutime.S \
	stub__wutime64.S \
	imp__wutime64.S \
	stub__y0.S \
	imp__y0.S \
	stub__y1.S \
	imp__y1.S \
	stub__yn.S \
	imp__yn.S \
	stub_abort.S \
	imp_abort.S \
	stub_abs.S \
	imp_abs.S \
	stub_acos.S \
	imp_acos.S \
	imp_acosf.S \
	stub_asctime.S \
	imp_asctime.S \
	stub_asin.S \
	imp_asin.S \
	imp_asinf.S \
	stub_atan.S \
	imp_atan.S \
	imp_atan2.S \
	imp_atan2f.S \
	imp_atanf.S \
	imp_atexit.S \
	stub_atof.S \
	imp_atof.S \
	stub_atoi.S \
	imp_atoi.S \
	stub_atol.S \
	imp_atol.S \
	stub_bsearch.S \
	imp_bsearch.S \
	stub_bsearch_s.S \
	imp_bsearch_s.S \
	stub_calloc.S \
	imp_calloc.S \
	imp_ceil.S \
	imp_ceilf.S \
	stub_clearerr.S \
	imp_clearerr.S \
	stub_clearerr_s.S \
	imp_clearerr_s.S \
	stub_clock.S \
	imp_clock.S \
	imp_cos.S \
	imp_cosf.S \
	stub_cosh.S \
	imp_cosh.S \
	imp_coshf.S \
	stub_ctime.S \
	imp_ctime.S \
	stub_difftime.S \
	imp_difftime.S \
	stub_div.S \
	imp_div.S \
	stub_exit.S \
	imp_exit.S \
	imp_exp.S \
	imp_expf.S \
	imp_fabs.S \
	stub_fclose.S \
	imp_fclose.S \
	stub_feof.S \
	imp_feof.S \
	stub_ferror.S \
	imp_ferror.S \
	stub_fflush.S \
	imp_fflush.S \
	stub_fgetc.S \
	imp_fgetc.S \
	stub_fgetpos.S \
	imp_fgetpos.S \
	stub_fgets.S \
	imp_fgets.S \
	stub_fgetwc.S \
	imp_fgetwc.S \
	stub_fgetws.S \
	imp_fgetws.S \
	imp_floor.S \
	imp_floorf.S \
	imp_fmod.S \
	imp_fmodf.S \
	stub_fopen.S \
	imp_fopen.S \
	stub_fopen_s.S \
	imp_fopen_s.S \
	stub_fprintf.S \
	imp_fprintf.S \
	stub_fprintf_s.S \
	imp_fprintf_s.S \
	stub_fputc.S \
	imp_fputc.S \
	stub_fputs.S \
	imp_fputs.S \
	stub_fputwc.S \
	imp_fputwc.S \
	stub_fputws.S \
	imp_fputws.S \
	stub_fread.S \
	imp_fread.S \
	stub_free.S \
	imp_free.S \
	stub_freopen.S \
	imp_freopen.S \
	stub_freopen_s.S \
	imp_freopen_s.S \
	stub_frexp.S \
	imp_frexp.S \
	stub_fscanf.S \
	imp_fscanf.S \
	stub_fscanf_s.S \
	imp_fscanf_s.S \
	stub_fseek.S \
	imp_fseek.S \
	stub_fsetpos.S \
	imp_fsetpos.S \
	stub_ftell.S \
	imp_ftell.S \
	stub_fwprintf.S \
	imp_fwprintf.S \
	stub_fwprintf_s.S \
	imp_fwprintf_s.S \
	stub_fwrite.S \
	imp_fwrite.S \
	stub_fwscanf.S \
	imp_fwscanf.S \
	stub_fwscanf_s.S \
	imp_fwscanf_s.S \
	stub_getc.S \
	imp_getc.S \
	stub_getchar.S \
	imp_getchar.S \
	stub_getenv.S \
	imp_getenv.S \
	stub_getenv_s.S \
	imp_getenv_s.S \
	stub_gets.S \
	imp_gets.S \
	stub_getwc.S \
	imp_getwc.S \
	stub_getwchar.S \
	imp_getwchar.S \
	stub_gmtime.S \
	imp_gmtime.S \
	stub_is_wctype.S \
	imp_is_wctype.S \
	stub_isalnum.S \
	imp_isalnum.S \
	stub_isalpha.S \
	imp_isalpha.S \
	stub_iscntrl.S \
	imp_iscntrl.S \
	stub_isdigit.S \
	imp_isdigit.S \
	stub_isgraph.S \
	imp_isgraph.S \
	stub_isleadbyte.S \
	imp_isleadbyte.S \
	stub_islower.S \
	imp_islower.S \
	stub_isprint.S \
	imp_isprint.S \
	stub_ispunct.S \
	imp_ispunct.S \
	stub_isspace.S \
	imp_isspace.S \
	stub_isupper.S \
	imp_isupper.S \
	stub_iswalnum.S \
	imp_iswalnum.S \
	stub_iswalpha.S \
	imp_iswalpha.S \
	stub_iswascii.S \
	imp_iswascii.S \
	stub_iswcntrl.S \
	imp_iswcntrl.S \
	stub_iswctype.S \
	imp_iswctype.S \
	stub_iswdigit.S \
	imp_iswdigit.S \
	stub_iswgraph.S \
	imp_iswgraph.S \
	stub_iswlower.S \
	imp_iswlower.S \
	stub_iswprint.S \
	imp_iswprint.S \
	stub_iswpunct.S \
	imp_iswpunct.S \
	stub_iswspace.S \
	imp_iswspace.S \
	stub_iswupper.S \
	imp_iswupper.S \
	stub_iswxdigit.S \
	imp_iswxdigit.S \
	stub_isxdigit.S \
	imp_isxdigit.S \
	stub_labs.S \
	imp_labs.S \
	imp_ldexp.S \
	stub_ldiv.S \
	imp_ldiv.S \
	stub_localeconv.S \
	imp_localeconv.S \
	stub_localtime.S \
	imp_localtime.S \
	imp_log.S \
	stub_log10.S \
	imp_log10.S \
	imp_log10f.S \
	imp_logf.S \
	stub_malloc.S \
	imp_malloc.S \
	stub_mblen.S \
	imp_mblen.S \
	stub_mbsrtowcs_s.S \
	imp_mbsrtowcs_s.S \
	stub_mbstowcs.S \
	imp_mbstowcs.S \
	stub_mbstowcs_s.S \
	imp_mbstowcs_s.S \
	stub_mbtowc.S \
	imp_mbtowc.S \
	stub_memchr.S \
	imp_memchr.S \
	stub_memcmp.S \
	imp_memcmp.S \
	stub_memcpy.S \
	imp_memcpy.S \
	stub_memmove.S \
	imp_memmove.S \
	stub_memset.S \
	imp_memset.S \
	stub_mktime.S \
	imp_mktime.S \
	imp_modf.S \
	imp_modff.S \
	stub_perror.S \
	imp_perror.S \
	imp_pow.S \
	imp_powf.S \
	stub_printf.S \
	imp_printf.S \
	stub_printf_s.S \
	imp_printf_s.S \
	stub_putc.S \
	imp_putc.S \
	stub_putchar.S \
	imp_putchar.S \
	stub_puts.S \
	imp_puts.S \
	stub_putwc.S \
	imp_putwc.S \
	stub_putwchar.S \
	imp_putwchar.S \
	stub_qsort.S \
	imp_qsort.S \
	stub_qsort_s.S \
	imp_qsort_s.S \
	stub_raise.S \
	imp_raise.S \
	stub_rand.S \
	imp_rand.S \
	stub_realloc.S \
	imp_realloc.S \
	stub_remove.S \
	imp_remove.S \
	stub_rename.S \
	imp_rename.S \
	stub_rewind.S \
	imp_rewind.S \
	stub_scanf.S \
	imp_scanf.S \
	stub_scanf_s.S \
	imp_scanf_s.S \
	stub_setbuf.S \
	imp_setbuf.S \
	stub_setjmp.S \
	imp_setjmp.S \
	stub_setlocale.S \
	imp_setlocale.S \
	stub_setvbuf.S \
	imp_setvbuf.S \
	stub_signal.S \
	imp_signal.S \
	imp_sin.S \
	imp_sinf.S \
	stub_sinh.S \
	imp_sinh.S \
	imp_sinhf.S \
	stub_sprintf.S \
	imp_sprintf.S \
	imp_sqrt.S \
	imp_sqrtf.S \
	stub_srand.S \
	imp_srand.S \
	stub_sscanf.S \
	imp_sscanf.S \
	stub_sscanf_s.S \
	imp_sscanf_s.S \
	stub_strcat.S \
	imp_strcat.S \
	stub_strcat_s.S \
	imp_strcat_s.S \
	stub_strchr.S \
	imp_strchr.S \
	stub_strcmp.S \
	imp_strcmp.S \
	stub_strcoll.S \
	imp_strcoll.S \
	stub_strcpy.S \
	imp_strcpy.S \
	stub_strcpy_s.S \
	imp_strcpy_s.S \
	stub_strcspn.S \
	imp_strcspn.S \
	stub_strerror.S \
	imp_strerror.S \
	stub_strftime.S \
	imp_strftime.S \
	stub_strlen.S \
	imp_strlen.S \
	stub_strncat.S \
	imp_strncat.S \
	stub_strncat_s.S \
	imp_strncat_s.S \
	stub_strncmp.S \
	imp_strncmp.S \
	stub_strncpy.S \
	imp_strncpy.S \
	stub_strncpy_s.S \
	imp_strncpy_s.S \
	stub_strpbrk.S \
	imp_strpbrk.S \
	stub_strrchr.S \
	imp_strrchr.S \
	stub_strspn.S \
	imp_strspn.S \
	stub_strstr.S \
	imp_strstr.S \
	stub_strtod.S \
	imp_strtod.S \
	stub_strtok.S \
	imp_strtok.S \
	stub_strtok_s.S \
	imp_strtok_s.S \
	stub_strtol.S \
	imp_strtol.S \
	stub_strtoul.S \
	imp_strtoul.S \
	stub_strxfrm.S \
	imp_strxfrm.S \
	stub_swprintf.S \
	imp_swprintf.S \
	stub_swprintf_s.S \
	imp_swprintf_s.S \
	stub_swscanf.S \
	imp_swscanf.S \
	stub_swscanf_s.S \
	imp_swscanf_s.S \
	stub_system.S \
	imp_system.S \
	stub_tan.S \
	imp_tan.S \
	imp_tanf.S \
	stub_tanh.S \
	imp_tanh.S \
	stub_tmpfile.S \
	imp_tmpfile.S \
	stub_tmpfile_s.S \
	imp_tmpfile_s.S \
	stub_tmpnam.S \
	imp_tmpnam.S \
	stub_tmpnam_s.S \
	imp_tmpnam_s.S \
	stub_tolower.S \
	imp_tolower.S \
	stub_toupper.S \
	imp_toupper.S \
	stub_towlower.S \
	imp_towlower.S \
	stub_towupper.S \
	imp_towupper.S \
	stub_ungetc.S \
	imp_ungetc.S \
	stub_ungetwc.S \
	imp_ungetwc.S \
	stub_vfprintf.S \
	imp_vfprintf.S \
	stub_vfprintf_s.S \
	imp_vfprintf_s.S \
	stub_vfwprintf.S \
	imp_vfwprintf.S \
	stub_vfwprintf_s.S \
	imp_vfwprintf_s.S \
	stub_vprintf.S \
	imp_vprintf.S \
	stub_vprintf_s.S \
	imp_vprintf_s.S \
	stub_vsprintf.S \
	imp_vsprintf.S \
	stub_vswprintf.S \
	imp_vswprintf.S \
	stub_vswprintf_s.S \
	imp_vswprintf_s.S \
	stub_vwprintf.S \
	imp_vwprintf.S \
	stub_vwprintf_s.S \
	imp_vwprintf_s.S \
	stub_wcrtomb_s.S \
	imp_wcrtomb_s.S \
	stub_wcscat.S \
	imp_wcscat.S \
	stub_wcscat_s.S \
	imp_wcscat_s.S \
	stub_wcschr.S \
	imp_wcschr.S \
	stub_wcscmp.S \
	imp_wcscmp.S \
	stub_wcscoll.S \
	imp_wcscoll.S \
	stub_wcscpy.S \
	imp_wcscpy.S \
	stub_wcscpy_s.S \
	imp_wcscpy_s.S \
	stub_wcscspn.S \
	imp_wcscspn.S \
	stub_wcsftime.S \
	imp_wcsftime.S \
	stub_wcslen.S \
	imp_wcslen.S \
	stub_wcsncat.S \
	imp_wcsncat.S \
	stub_wcsncat_s.S \
	imp_wcsncat_s.S \
	stub_wcsncmp.S \
	imp_wcsncmp.S \
	stub_wcsncpy.S \
	imp_wcsncpy.S \
	stub_wcsncpy_s.S \
	imp_wcsncpy_s.S \
	imp_wcsnlen.S \
	stub_wcspbrk.S \
	imp_wcspbrk.S \
	stub_wcsrchr.S \
	imp_wcsrchr.S \
	stub_wcsrtombs_s.S \
	imp_wcsrtombs_s.S \
	stub_wcsspn.S \
	imp_wcsspn.S \
	stub_wcsstr.S \
	imp_wcsstr.S \
	stub_wcstod.S \
	imp_wcstod.S \
	stub_wcstok.S \
	imp_wcstok.S \
	stub_wcstok_s.S \
	imp_wcstok_s.S \
	stub_wcstol.S \
	imp_wcstol.S \
	stub_wcstombs.S \
	imp_wcstombs.S \
	stub_wcstombs_s.S \
	imp_wcstombs_s.S \
	stub_wcstoul.S \
	imp_wcstoul.S \
	stub_wcsxfrm.S \
	imp_wcsxfrm.S \
	stub_wctomb.S \
	imp_wctomb.S \
	stub_wctomb_s.S \
	imp_wctomb_s.S \
	stub_wprintf.S \
	imp_wprintf.S \
	stub_wprintf_s.S \
	imp_wprintf_s.S \
	stub_wscanf.S \
	imp_wscanf.S \
	stub_wscanf_s.S \
	imp_wscanf_s.S \

